test/Fail/Issue4373.err
Issue4373.agda:10.14-15: error: [InstanceNoCandidate]
No instance of type A.T was found in scope.
when checking that the expression search has type Set
